Update UI Components for Treatments, Doctors, Patients & Appointmemnts

--- a/CurveDentalManagement.UI/src/app/features/appointments/appointment-lists/appointment-lists.component.html
+++ b/CurveDentalManagement.UI/src/app/features/appointments/appointment-lists/appointment-lists.component.html
@@ -31,7 +31,7 @@
                     <tbody class="text-center">
                          <tr *ngFor="let appointment of appointments">
                             <td>{{ appointment.appointmentCode }}</td>
-                            <td>{{ appointment.appointmentDate | date:'short' }}</td>
+                            <td>{{ appointment.appointmentDate | date:'M/d/yy' }}</td>
                             <td>{{ appointment.appointmentTime}}</td>
                              <td class="text-wrap">
                                 <span *ngFor="let patient of appointment.patients; let i = index">
