--- a/CurveDentalManagement.UI/src/app/features/appointments/appointment-details/appointment-details.component.html
+++ b/CurveDentalManagement.UI/src/app/features/appointments/appointment-details/appointment-details.component.html
@@ -1,1 +1,113 @@
-<p>appointment-details works!</p>
+<header class="bg-body-tertiary pt-3 pb-md-3 px-3 px-lg-5 d-flex d-md-block title justify-content-center">
+    <div class="d-flex flex-column flex-md-row align-items-center justify-content-center justify-content-md-between mb-3" >
+      <!-- Title -->
+      <h1 class="start me-auto me-md-none h3 px-3">Appointment Details</h1>
+  
+      <!-- Back Button -->
+      <div class="d-flex flex-column flex-sm-row align-items-sm-center gap-2 px-3">
+        <button type="button" class="btn btn-dark" [routerLink]="['/admin/appointments']">Back</button>
+      </div>
+    </div>
+</header>
+
+<!-- Appointment Table List -->
+ <div class="card m-4">
+    <div class="card-body">
+         <ng-container *ngIf="appointments$ | async as appointment">
+            <div class="overflow-x-auto">
+                <table class="table table-striped table-bordered table-hover text-nowrap">
+                    <thead class="text-wrap text-center">
+                        <tr>
+                            <th scope="col">Appointment Code</th>
+                            <th scope="col">Appointment Date</th>
+                            <th scope="col">Appointment Time</th>
+                            <th scope="col">Status</th>
+                            <th scope="col">Remarks</th>
+                        </tr>
+                    </thead>
+                        <tbody class="text-center text-wrap">
+                        <tr>
+                            <td>{{ appointment.appointmentCode }}</td>
+                            <td>{{ appointment.appointmentDate | date:'M/d/yy' }}</td>
+                            <td>{{ appointment.appointmentTime}}</td>
+                            <td>{{ appointment.status }}</td>
+                            <td>{{ appointment.remarks }}</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>        
+         </ng-container>
+    </div>
+</div>     
+
+<!-- Patient Table List -->
+ <div class="card m-4">
+    <div class="card-body">
+        <ng-container *ngIf="patients$ | async as patients">
+            <div *ngIf="patients.length > 0">
+                 <div class="overflow-x-auto">
+                    <h4 class="pb-2 border-bottom mt-3">Patient Information</h4>
+                    <table class="table table-striped table-bordered table-hover text-nowrap mt-4">
+                          <thead class="text-nowrap text-center">
+                                <tr>
+                                    <th scope="col">Full Name</th>
+                                    <th scope="col">Age</th>
+                                    <th scope="col">Date of Birth</th>
+                                    <th scope="col">Gender</th>
+                                    <th scope="col">Phone Number</th>
+                                    <th scope="col">Email</th>
+                                    <th scope="col">Address</th>
+                                </tr>
+                            </thead>
+                            <tbody class="text-center">
+                                <tr *ngFor="let patient of patients">
+                                    <td>{{ patient.firstName }} {{ patient.lastName }}</td>
+                                    <td>{{ patient.age }}</td>
+                                    <td>{{ patient.dateOfBirth | date: 'MM/dd/yyyy' }}</td>
+                                    <td>{{ patient.gender}}</td>
+                                    <td>{{ patient.phoneNumber }}</td>
+                                    <td>{{ patient.email}}</td>
+                                    <td>{{ patient.address}}</td>
+                                </tr>
+                            </tbody>
+                    </table>
+                 </div>
+            </div>
+        </ng-container>
+    </div>
+</div>
+
+<!-- Doctor Table List -->
+<div class="card m-4">
+    <div class="card-body">
+        <ng-container *ngIf="doctors$ | async as doctors">
+            <div *ngIf="doctors.length > 0">
+                <div class="overflow-x-auto">
+                    <h4 class="pb-2 border-bottom mt-3">Assigned Doctor(s): </h4>
+                    <table class="table table-striped table-bordered table-hover text-nowrap mt-4">
+                        <thead class="text-nowrap text-center">
+                            <tr>
+                                <th scope="col">Full Name</th>
+                                <th scope="col">Email Address</th>
+                                <th scope="col">Specialization</th>
+                                <th scope="col">Department</th>
+                                <th scope="col">License Number</th>
+                                <th scope="col">Schedule</th>
+                            </tr>
+                        </thead>
+                        <tbody class="text-center">
+                            <tr *ngFor="let doctor of doctors">
+                                <td>Dr. {{ doctor.firstName }} {{ doctor.lastName }}</td>
+                                <td>{{ doctor.email }}</td>
+                                <td>{{ doctor.specialization }}</td>
+                                <td>{{ doctor.department }}</td>
+                                <td>{{ doctor.licenseNumber }}</td>
+                                <td>{{ doctor.schedule }}</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </ng-container>
+    </div>
+</div>    
