--- a/CurveDentalManagement.UI/src/app/features/doctor/doctor-detail/doctor-detail.component.html
+++ b/CurveDentalManagement.UI/src/app/features/doctor/doctor-detail/doctor-detail.component.html
@@ -13,6 +13,8 @@
 <!-- Table List -->
 <div class="card m-4">
     <div class="card-body">
+
+        <!-- Doctor Information Section -->
         <ng-container *ngIf="doctors$ | async as doctor">
             <div class="overflow-x-auto">
                 <h4 class="pb-2 border-bottom mt-3">Doctor Information</h4>
@@ -59,6 +61,51 @@
                 </table>
             </div>
         </ng-container>
+
+        <!-- Appointment List Section -->
+        <ng-container *ngIf="appointments$ | async as appointments">
+        <div *ngIf="appointments.length > 0">
+                <div class="overflow-x-auto">
+                    <h4 class="pb-2 border-bottom mt-3">Appointment Lists</h4>
+                    <table class="table table-striped table-bordered table-hover text-nowrap mt-4" *ngIf="appointments.length > 0; else noResults">
+                                            <thead class="text-nowrap text-center">
+                                                <tr>
+                                                    <th scope="col">Appointment Code</th>
+                                                    <th scope="col">Appointment Date</th>
+                                                    <th scope="col">Appointment Time</th>
+                                                    <th scope="col">Patient Name</th>
+                                                    <th scope="col">Status</th>
+                                                    <th scope="col">Remarks</th>
+                                                </tr>
+                                            </thead>
+                                            <tbody class="text-center">
+                                                <tr *ngFor="let appointment of appointments">
+                                                    <td>{{ appointment.appointmentCode }}</td>
+                                                    <td>{{ appointment.appointmentDate | date:'M/d/yy' }}</td>
+                                                    <td>{{ appointment.appointmentTime}}</td>
+                                                    <td class="text-wrap">
+                                                        <span *ngFor="let patient of appointment.patients; let i = index">
+                                                        {{ patient.firstName }} {{ patient.lastName }} <span *ngIf="i < appointment.patients.length - 1">,</span>
+                                                        </span>
+                                                    </td>
+                                                    <td>{{ appointment.status }}</td>
+                                                    <td>{{ appointment.remarks }}</td>
+                                                </tr>
+                                            </tbody>
+                    </table>
+                                    
+                    <!-- No Results Template -->
+                    <ng-template #noResults>
+                        <div class="text-center text-muted py-3">
+                            <ngb-alert [dismissible]="false">
+                                No Schedule Appointment Yet.
+                            </ngb-alert>
+                        </div>
+                    </ng-template>               
+                        
+                </div>        
+            </div>  
+        </ng-container>
+
     </div>
 </div>
-
