--- a/CurveDentalManagement.UI/src/app/features/doctor/doctor-detail/doctor-detail.component.html
+++ b/CurveDentalManagement.UI/src/app/features/doctor/doctor-detail/doctor-detail.component.html
@@ -17,7 +17,7 @@
         <!-- Doctor Information Section -->
         <ng-container *ngIf="doctors$ | async as doctor">
             <div class="overflow-x-auto">
-                <h4 class="pb-2 border-bottom mt-3">Doctor Information</h4>
+                <h4 class="pb-2 border-bottom mt-4">Doctor Information</h4>
                 <table class="table table-striped table-bordered table-hover text-nowrap mt-4">
                     <thead class="text-nowrap text-center">
                         <tr>
@@ -38,7 +38,7 @@
                         </tr>    
                      </tbody>
                 </table>
-                <h4 class="pb-2 border-bottom mt-3">Professional Information</h4>
+                <h4 class="pb-2 border-bottom mt-4">Professional Information</h4>
                  <table class="table table-striped table-bordered table-hover text-nowrap mt-4">
                     <thead class="text-nowrap text-center">
                         <tr>
@@ -62,7 +62,45 @@
             </div>
         </ng-container>
 
-        <!-- Appointment List Section -->
+        <!-- Treatments List Section -->
+        <ng-container *ngIf="treatments$ | async as treatments">
+             <div *ngIf="treatments.length > 0">
+                <div class="overflow-x-auto">
+                    <h4 class="pb-2 border-bottom mt-3">Treatment Lists</h4>
+                     <table class="table table-striped table-bordered table-hover text-nowrap mt-4" *ngIf="treatments.length > 0; else noResults">
+                        <thead class="text-wrap text-center">
+                            <tr>
+                                <th scope="col">Treatment Code</th>
+                                <th scope="col">Treatment Name</th>
+                                <th scope="col">Duration</th>
+                                <th scope="col">Cost</th>
+                                <th scope="col">Description</th>
+                            </tr>
+                        </thead>
+                        <tbody class="text-center text-wrap">
+                            <tr *ngFor="let treatment of treatments">
+                                <td>{{ treatment.treatmentCode }}</td>
+                                <td>{{ treatment.treatmentName }}</td>
+                                <td>{{ treatment.duration }}</td>
+                                <td>{{ treatment.cost }}</td>
+                                <td>{{ treatment.description }}</td>
+                                
+                            </tr>
+                        </tbody>
+                     </table>
+                    <!-- No Results Template -->
+                    <ng-template #noResults>
+                        <div class="text-center text-muted py-3">
+                            <ngb-alert [dismissible]="false">
+                                No Treatment Assigned Yet.
+                            </ngb-alert>
+                        </div>
+                    </ng-template>   
+                </div>    
+             </div>
+        </ng-container>
+
+        <!-- Appointments List Section -->
         <ng-container *ngIf="appointments$ | async as appointments">
         <div *ngIf="appointments.length > 0">
                 <div class="overflow-x-auto">
