--- a/CurveDentalManagement.UI/src/app/features/treatments/treatment-detail/treatment-detail.component.html
+++ b/CurveDentalManagement.UI/src/app/features/treatments/treatment-detail/treatment-detail.component.html
@@ -67,7 +67,7 @@
         <ng-container *ngIf="doctors$ | async as doctors">
             <div *ngIf="doctors.length > 0">
                 <div class="overflow-x-auto">
-                    <h4 class="pb-2 border-bottom mt-3">Doctor(s) Information</h4>
+                    <h4 class="pb-2 border-bottom mt-3">Assigned Doctor(s): </h4>
                     <table class="table table-striped table-bordered table-hover text-nowrap mt-4">
                         <thead class="text-nowrap text-center">
                             <tr>
